background masking added back in

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         }
 
         #home-gl{
-            /*-webkit-mask-image: url('resources/images/3dFace2.png');*/
-            /*-o-mask-image: url('resources/images/3dFace2.png');*/
-            /*-moz-mask-image: url('resources/images/3dFace2.png');*/
-            /*mask-image: url('resources/images/3dFace2.png');*/
+            -webkit-mask-image: url('resources/images/3dFace2.png');
+            -o-mask-image: url('resources/images/3dFace2.png');
+            -moz-mask-image: url('resources/images/3dFace2.png');
+            mask-image: url('resources/images/3dFace2.png');
 
             /*mask-repeat: no-repeat;*/
             /*-webkit-mask-repeat: no-repeat;*/
