fixed canceling animation and static overlay.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 </head>
 <body>
 <!--<div id="main-container">-->
-<div class="down-button home-button">
+<div id='bottom-button' class="down-button home-button">
     <button  onclick="navigationPages.PORTFOLIO.show()">ENTER</button>
 </div>
-<div class="up-button">
+<div id='top-button' class="up-button">
 <button  onclick="navigationPages.HOME.show()" />
 </div>
 <view id="home">
